yimpexeditor/src/test/resources/errors/syntacticallycorrect/quoted-modifiers2.impex
# ERROR modifier assignments cannot be surrounded by double quotes. This syntax is valid but resulting name will be n/a 
INSERT_UPDATE Customer; uid[unique=true];Name["default=Mario"]; 
; andi; ; 
